fix spacing issue with skater

--- a/src/App.css
+++ b/src/App.css
@@ -592,8 +592,8 @@ a:hover, a:active { text-decoration: none; color: var(--main-green-color) }
 }
 
 .login-loading {
-  width: 50px;
-  height: 50px;
+  width: 200px;
+  height: 200px;
   text-align: center;
   margin: 0 auto;
   display: flex;
@@ -601,7 +601,7 @@ a:hover, a:active { text-decoration: none; color: var(--main-green-color) }
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -25px 0 0 -25px;
+  margin: -100px 0 0 -100px;
 }
 
 .skater-login-loading {
